--- a/mandelbulber2/formula/ui/transf_blockify.ui
+++ b/mandelbulber2/formula/ui/transf_blockify.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_blockify</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>853</width>
+    <width>925</width>
     <height>1920</height>
    </rect>
   </property>
@@ -242,10 +242,17 @@ pre-transform, slot#1 for 1 iteration</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
        <property name="text">
         <string>normalized before rounding??</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
+       <property name="text">
+        <string>test</string>
        </property>
       </widget>
      </item>
